--- a/themes/so-strata-theme/docroot/_diffs/css/color_schemes/normal/normal.css
+++ b/themes/so-strata-theme/docroot/_diffs/css/color_schemes/normal/normal.css
@@ -409,20 +409,33 @@ input.aui-form-validator-error, textarea.aui-form-validator-error, select.aui-fo
 	}
 
 	.avatar {
-		background: none 50% 50% no-repeat;
-		background-size: cover;
 		display: inline-block;
 		margin: -0.62em 0.5em -0.55em -0.86em;
-		overflow: hidden;
 		vertical-align: middle;
 
 		&, img {
 			height: 55px;
 			width: 55px;
 		}
+	}
+}
+
+#banner, #navigation {
+	.avatar {
+		background: none 50% 50% no-repeat;
+		background-size: cover;
+		overflow: hidden;
 
 		img {
 			visibility: hidden;
+		}
+	}
+}
+
+.ie {
+	#banner, #navigation {
+		.avatar img {
+			visibility: visible;
 		}
 	}
 }
@@ -464,10 +477,8 @@ input.aui-form-validator-error, textarea.aui-form-validator-error, select.aui-fo
 		}
 	}
 
-	&.focus {
-		.search-controls {
-			display: block;
-		}
+	&.focus .search-controls {
+		display: block;
 	}
 }
 
@@ -480,14 +491,11 @@ div#navigation {
 
 	.avatar {
 		display: block;
-		height: 155px;
 		overflow: hidden;
 		position: relative;
-		width: 155px;
 
-		img {
-			height: auto;
-			min-height: 155px;
+		&, img {
+			height: 155px;
 			width: 155px;
 		}
 
@@ -498,10 +506,8 @@ div#navigation {
 			visibility: hidden;
 		}
 
-		&:hover {
-			.edit-portrait {
-				visibility: visible;
-			}
+		&:hover .edit-portrait {
+			visibility: visible;
 		}
 	}
 
@@ -1697,12 +1703,14 @@ div#navigation {
 		border-bottom-width: 0;
 	}
 
-	.contacts-profile .lfr-contact-grid-item {
-		padding-top: 20px;
-	}
+	.contacts-profile {
+		.lfr-contact-grid-item {
+			padding-top: 20px;
+		}
 
-	.contacts-profile .user-information-column-1 {
-		float: none;
+		.user-information-column-1 {
+			float: none;
+		}
 	}
 
 	.lfr-app-column-view .contacts-profile .lfr-contact-grid-item {
